# raspberrypi-epaper-dashboard

./: .gitignore  .icewormignore  .pre-commit-config.yaml  .pylintrc  .python-version  README.md  example.py  get_stock_quotes.py  pyproject.toml  raspberrypi-dashboard.py  requirements.txt  udot-wfh.py  update_display.py  weather_air.py
.github/workflows/: python-package-ci.yml
src/plugins/: aqi.py  stock_quotes.py
src/raspberrypi-epaper-dashboard/: raspberrypi-dashboard.py
src/raspberrypi_epaper_dashboard/: raspberrypi_dashboard.py
systemd/: epaper-dashboard.service  epaper-dashboard.timer
